@@ -5,6 +5,8 @@ Version 1.5.4+svn:
    * updated translations: Finnish, Slovak
  * User interface:
    * Various minor cleanups and refactoring of the new widgets.
+   * Fixed a problem under Window where the locales detection didn't work
+     all languages are enabled now for Windows.
  * Miscellaneous and bug fixes:
    * Fixed the list of the unit's attacks getting cut off in the right panel
      (bug #12297).
